--- a/ms/userena/templates/userena/password_form.html
+++ b/ms/userena/templates/userena/password_form.html
@@ -7,16 +7,30 @@
 {% block content_title %}<h2>{% blocktrans with user.username as username %}Account &raquo; {{ username }}{% endblocktrans %}</h2>{% endblock %}
 
 {% block content_extra %}
-<form action="" method="post" id="password_change_form">
-  <ul id="box-nav">
-    <li><a href="{% url 'userena_profile_edit' user.username %}">{% trans "Edit profile" %}</a></li>
-    <li class="last"><a href="{% url 'userena_email_change' user.username %}">{% trans "Change email" %}</a></li>
-  </ul>
-  <fieldset>
-    <legend>{% trans "Change Password" %}</legend>
-    {% csrf_token %}
-    {{ form.as_p }}
-  </fieldset>
-  <input type="submit" value="{% trans "Change password" %}" />
-</form>
+<div id="r-column">
+	<h5><a href="{% url 'userena_profile_edit' user.username %}">My Account</a></h5>
+	<h5><a href="{% url 'booking_history' user.username %}">Cleaning History</a></h5>
+	<h5><a href="{% url 'billing' user.username %}">Billing History</a></h5>
+	<h5 id="a-active">{% trans "Change Password" %}</h5>
+	<h5><a href="{% url 'userena_signout'%}">Sign Out</a></h5>
+	<div id="a-box">
+		<div id="a-type">Account Balance</div>
+		<div id="a-rest">5,000 RMB</div>
+	</div>
+</div>
+<div id="l-column">
+	<form action="" method="post" id="password_change_form">
+	  <fieldset>
+	    <legend>{% trans "Change Password" %}</legend>
+	    {% csrf_token %}
+	    <p><label for="id_old_password">Old Password:</label> {{form.old_password}}</p>
+	    <p>{{form.old_password.errors}}</p>
+	    <p><label for="id_new_password1">New Password:</label> {{form.new_password1}}</p>
+	    <p>{{form.new_password1.errors}}</p>
+	    <p><label for="id_new_password2">New Password Confirmation:</label> {{form.new_password2}}</p>
+	    <p>{{form.new_password2.errors}}</p>
+	  </fieldset>
+	  <input type="submit" value="{% trans "Change Password" %}" />
+	</form>
+</div>
 {% endblock %}
