--- a/ms/userena/templates/userena/password_reset_form.html
+++ b/ms/userena/templates/userena/password_reset_form.html
@@ -4,12 +4,28 @@
 {% block title %}{% trans "Reset password" %}{% endblock %}
 
 {% block content_extra %}
-<form action="" method="post">
-  <fieldset>
-    <legend>{% trans "Reset Password" %}</legend>
-    {% csrf_token %}
-    {{ form.as_p }}
-  </fieldset>
-  <input type="submit" value="{% trans "Send password" %}" />
-</form>
+<div id="si-content">
+	<div id="si-box">
+		<form action="" method="post">
+		  <fieldset>
+		    <legend>{% trans "Reset Password" %}</legend>
+		    {% csrf_token %}
+		    {% for field in form %}
+			    <p class="si-field">
+			    {{ field.label_tag }}
+			    {{ field }}
+			    </p>
+			{{ field.errors }}
+		    {% endfor %}
+		  </fieldset>
+		  <input id="si_sub" type="submit" value="{% trans "Send password" %}" />
+		</form>
+	</div>
+	<div id="si-fea">
+		<p>Make a new booking</p>
+		<p>Change/cancel your booking</p>
+		<p>Check your history</p>
+		<p>Rate the service</p>
+	</div>
+</div>
 {% endblock %}
