--- a/ms/userena/templates/userena/signin_form.html
+++ b/ms/userena/templates/userena/signin_form.html
@@ -5,27 +5,37 @@
 {% block title %}{% trans "Signin" %}{% endblock %}
 
 {% block content_extra %}
-<form action="" method="post">
-  {% csrf_token %}
-  <fieldset>
-    {{ form.non_field_errors }}
-    {% for field in form %}
-    {{ field.errors }}
-    {% comment %} Displaying checkboxes differently {% endcomment %}
-    {% if field.name == 'remember_me' %}
-    <p class="checkbox">
-    <label for="id_{{ field.name }}">{{ field }} {{ field.label }}</label>
-    </p>
-    {% else %}
-    <p>
-    {{ field.label_tag }}
-    {{ field }}
-    </p>
-    {% endif %}
-    {% endfor %}
-  </fieldset>
-  <input type="submit" value="{% trans "Signin" %}" />
-  <p class="forgot-password"><a href="{% url 'userena_password_reset' %}" title="{% trans 'Forgot your password?' %}">{% trans "Forgot your password?" %}</a></p>
-  {% if next %}<input type="hidden" name="next" value="{{ next }}" />{% endif %}
-</form>
+<div id="si-content">
+	<div id="si-box">
+		<form action="" method="post">
+		  {% csrf_token %}
+		  <fieldset>
+		    {{ form.non_field_errors }}
+		    {% for field in form %}
+		    {% comment %} Displaying checkboxes differently {% endcomment %}
+		    {% if field.name == 'password' %}
+		    <p class="si-field">
+		    <label for="id_{{ field.name }}">{{ field.label }} <a href="{% url 'userena_password_reset' %}" title="{% trans 'Forgot your password?' %}">{% trans "Forgot your password?" %}</a></label>{{ field }} 
+		    </p>
+		    {% else %}
+		    <p class="si-field">
+		    {{ field.label_tag }}
+		    {{ field }}
+		    </p>
+		    {% endif %}
+		    {{ field.errors }}
+		    {% endfor %}
+		  </fieldset>
+		  <input id="si_sub" type="submit" value="{% trans "Sign In" %}" />
+		  {% if next %}<input type="hidden" name="next" value="{{ next }}" />{% endif %}
+		</form>
+		<p id="si-su">Don't have an account? <a href="{% url 'clean_info' %}" title="Sign Up">Click here</a>.</p>
+	</div>
+	<div id="si-fea">
+		<p>Make a new booking</p>
+		<p>Change/cancel your booking</p>
+		<p>Check your history</p>
+		<p>Rate the service</p>
+	</div>
+</div>
 {% endblock %}
