--- a/ms/static/css/home.css
+++ b/ms/static/css/home.css
@@ -66,6 +66,10 @@
 	color: #fff;
 	font-weight: bold;
 	margin-bottom:60px;
+	font-size: 16px;
+}
+.blk-middle p font{
+	
 }
 .how-it-works{
 	background: rgba(255,255,255,0.5);
@@ -103,8 +107,8 @@
 	padding:7px 40px;
 	padding-bottom:3px\9;
 	font-weight:bold;
-	background-color:#55DCCD;
-	border:1px solid #57DBCD;
+	background-color:#84d6d2;
+	border:1px solid #84d6d2;
 	line-height: 20px;
 }
 .glyphicon{
@@ -112,7 +116,8 @@
 }
 .fea-area{
 	margin-top:95px;
-	padding:25px 0;
+	padding-top:25px;
+	padding-bottom:40px;
 }
 .fea-area ul{
 	width:100%;
@@ -122,7 +127,7 @@
 	overflow: hidden;
 }
 .fea-area ul li{
-	width:20%;
+	width:25%;
 	padding:0 35px;
 	float:left;
 	text-align:center;
@@ -133,17 +138,17 @@
 }
 .fea-area ul li p{
 	width:100%;
-
 	font-size:16px;
-
+	font-weight:bold;
 	margin:0;
 }
 .fea-area ul li font{
 	font-size:12px;
+	cursor:pointer;
 }
 .info-area{
 	padding:25px 150px;
-	background-color:#55DCCD;
+	background-color:#84d6d2;
 }
 .info-area ul{
 	padding: 10px 0;
@@ -185,7 +190,7 @@
 }
 .input-group-addon {
 	top: 1px;
-	right: 15px;
+	right: 16px;
 	position: absolute;
 	padding: 10px 12px;
 	border: 0;
