--- a/ms/templates/home/index.html
+++ b/ms/templates/home/index.html
@@ -5,16 +5,7 @@
 {% endblock extra_css %}
 {% block content %}
 <div class="carousel slide bigeye">
-  <!-- Indicators
-  <ol class="carousel-indicators">
-    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-  </ol>
-	 -->
-  <!-- Wrapper for slides -->
   <ul class="carousel-inner">
-  	
     <li class="item active">
       <img src="/static/img/s1.png" alt="image 1">
     </li>
@@ -24,30 +15,14 @@
      <li class="item">
       <img src="/static/img/s3.png" alt="image 3">
     </li>
-     <li class="item">
-      <img src="/static/img/s4.png" alt="image 4">
-    </li>
-     <li class="item">
-      <img src="/static/img/s5.png" alt="image 5">
-    </li>
   </ul>
-  <!-- Controls
-  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-    <span class="glyphicon glyphicon-chevron-left"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-    <span class="glyphicon glyphicon-chevron-right"></span>
-    <span class="sr-only">Next</span>
-  </a>
-   -->
 </div>
 <div class="book-area">
 	<div class="book-container">
 		<div class="welcome-area">
 			<div class="blk-middle">
 				<h1>WANT A CLEAN HOME?</h1>
-				<p>BOOK ONLINE or CALL 1234 1234 FOR ENGLISH SERVICE</p>
+				<p>BOOK ONLINE or CALL FOR ENGLISH SERVICE <font>021-6380-1553</font></p>
 				<a href="#mark-1" class="btn btn-contrast btn-large how-it-works">HOW IT WORKS</a>
       		</div>
 		</div>
@@ -78,27 +53,25 @@
 		<li>
 			<img src="/static/img/f1.png" alt="feature" />
 			<p>100% Satisfaction Guarantee</p>
-			<font>Learn More</font>
+			<font class="poptip" data-toggle="tooltip" data-placement="bottom" title="If you are not completely satisfied with your cleaning, we will come back and re-clean it for free!">Learn More</font>
 		</li>
 		<li>
 			<img src="/static/img/f2.png" alt="feature" />
-			<p>Professionally trained and certified cleaners</p>
-			<font>Learn More</font>
-		</li>
-		<li>
-			<img src="/static/img/f3.png" alt="feature" />
-			<p>Insured and Bonded</p>
-			<font>Learn More</font>
+			<p>Professionally Trained and Certified Cleaners</p>
+			<font class="poptip" data-toggle="tooltip" data-placement="bottom" title="Every Merry Cleaner goes through an extensive training program to proudly wear the uniform">Learn More</font>
 		</li>
 		<li>
 			<img src="/static/img/f4.png" alt="feature" />
 			<p>Trust & Safety</p>
-			<font>Learn More</font>
+			<font class="poptip" data-toggle="tooltip" data-placement="bottom" title="All Merry cleaners are background checked for your safety and peace of mind.">Learn More</font>
+			<div class="bpop" id="bpop-ts">
+				<span class="b-close">x</span>
+				<div class="b-content"></div>
+			</div>
 		</li>
 		<li>
 			<img src="/static/img/f5.png" alt="feature" />
-			<p>English-speaking Customer Service</p>
-			<font>Learn More</font>
+			<p>English-Speaking Customer Service</p>
 		</li>
 	</ul>
 </div>
@@ -112,12 +85,12 @@
 		<li>
 			<img src="/static/img/i2.png" alt="info" />
 			<p>2. CLEAN</p>
-			<font>Professionally certified cleaner cleans your place</font>
+			<font>Certified Merry Cleaner cleans your place</font>
 		</li>
 		<li>
 			<img src="/static/img/i3.png" alt="info" />
 			<p>3. ENJOY</p>
-			<font>Come home to a speaking clean home</font>
+			<font>Come home to a sparkling, clean home</font>
 		</li>
 	</ul>
 	<div id="wi"><a href="#" class="btn btn-contrast btn-large home-wi">WHAT'S INCLUDED?</a></div>
@@ -139,15 +112,16 @@ $('.time-box').datetimepicker({
 	});
 $('.input-group').click(function(){
 	$(this).children('input').focus();
-})
+});
 $('.carousel').carousel({
 	interval: 5500,
 	pause: false
-	})
+	});
+$('.poptip').tooltip();
 </script>
 <script type="text/javascript">
 $('.date-box').val('{{ default_date }}');
-$('.time-box').val('09:00');
+$('.time-box').val('08:00');
 $("#clean-book").click(function(){
 	if ($('.date-box').val()=="" || $('.time-box').val()==""){
 		alert ("please choose the time");
